# ACM_UC-JJW-Backend

./: README.md  check_users.py  crear_medicos.py  crear_pacientes.py  create_test_users.py  debug_appointments.py  pyproject.toml  verificar_medicos.py  verificar_pacientes.py  verify_tables.py
app/: __init__.py  config.py  database.py  main.py
app/models/: __init__.py  appointment.py  doctor.py  medical_record.py  patient.py  prescription.py  user.py
app/routes/: __init__.py  appointments.py  auth.py  doctors.py  medical_records.py  patients.py  prescriptions.py
app/utils/: __init__.py  validators.py
