[project]
name = "saludconectada-backend"
version = "0.1.0"
description = "Backend API for SaludConectada medical system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "pyodbc>=5.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-dateutil>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.scripts]
dev = "uvicorn:app.main --reload --host 0.0.0.0 --port 8001"
start = "uvicorn:app.main --host 0.0.0.0 --port 8001"